--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -38,6 +38,14 @@
             android:text="@string/previous_question_button"
             />
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button"
+        />
+
         <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
