--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -6,6 +6,7 @@
     >
 
     <TextView
+        android:id="@+id/are_you_sure"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
