--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,23 +40,26 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <Button
+        <ImageButton
             android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/arrow_left"
+            android:contentDescription="@string/previous_question_button"
             android:drawablePadding="4dp"
-            android:drawableLeft="@drawable/arrow_left"
-            android:text="@string/previous_question_button"
             />
 
-        <Button
+        <ImageButton
             android:id="@+id/next_button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/next_question_button"
-            android:drawableRight="@drawable/arrow_right"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/arrow_right"
+            android:contentDescription="@string/next_question_button"
             android:drawablePadding="4dp"
             />
+
     </LinearLayout>
 
 
