--- a/app/src/main/res/menu/quiz.xml
+++ b/app/src/main/res/menu/quiz.xml
@@ -7,4 +7,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/get_score"
+        android:title="@string/get_score"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
